fix: octicon-gear visibility
URL: https://help.github.com/en/articles/viewing-jekyll-build-error-messages#viewing-jekyll-build-failure-messages-in-your-repository

--- a/github-dark.css
+++ b/github-dark.css
@@ -3910,7 +3910,7 @@
   img[src$="invertocat.png"], .ghd-invert, .render-shell img.math,
   #footer .github img, img[data-canonical-src^="https://codecov.io"],
   #com span.octicon:not(.octicon-comment-discussion),
-  .developer-thanks-image img {
+  .developer-thanks-image img, svg.octicon-gear {
     filter: invert(100%) hue-rotate(180deg) !important;
   }
   /* marketplace + help img invert */
